--- a/gradcheck.html
+++ b/gradcheck.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<meta charset="UTF-8"> <!--This is to dispay korean characters correctly-->
+<meta charset="UTF-8"> <!--This is to display korean characters correctly-->
 </head>
 
 <body>
